:rotating_light: Fix linter warnings